# gnome-reddit-wallpaper

./: .gitignore  README.md  com.ajbucci.wallgarden.json  generated-poetry-sources.json  pyproject.toml  python-sources.json  setup.cfg
gredditwallpaper/: cli.py  config.py  gui.py
gredditwallpaper/gui/: dark-theme.css  light-theme.css  styles.css
scripts/: lint.sh  test.sh
src/: gredditwallpaper.py  redwall.py
src/gui/: main_window.py  styles.css
wallgarden/: cli.py  config.py  core.py  gui.py  slideshow.py  utils.py
wallgarden/gui/: layout.css
wallgarden/service/: wallgarden.service  wallgarden.service.template  wallgarden.timer  wallgarden.timer.template
